--- a/.travis.yml
+++ b/.travis.yml
@@ -9,13 +9,14 @@ before_install:
   -o Dpkg::Options::="--force-confnew" -yqq docker-engine lvm2 xfsprogs ; echo 'DOCKER_OPTS="$DOCKER_OPTS
   --storage-driver devicemapper"' | sudo tee -a /etc/default/docker ; sudo service
   docker restart ; fi
-- export TRAVIS_COOKBOOKS_BRANCH=meat-neo4j
+- export TRAVIS_COOKBOOKS_BRANCH=meat-community-cookbook-cleanup
 install:
-- git clone --branch="meat-neo4j" "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git checkout -qf 91358f0bf3ab ; popd
+- git clone --depth=50 "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git fetch origin +refs/pull/421/merge && git checkout
+  -qf FETCH_HEAD ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
-- export PACKER_TEMPLATES_BRANCH="meat-neo4j"
+- export PACKER_TEMPLATES_BRANCH="+refs/pull/421/merge"
 - "./packer-templates/bin/packer-build-script internal-bastion"
 addons:
   artifacts:
