--- a/.travis.yml
+++ b/.travis.yml
@@ -11,11 +11,12 @@ before_install:
   docker restart ; fi
 - export TRAVIS_COOKBOOKS_BRANCH=cha-md5sum-fix
 install:
-- git clone --branch="cha-packer-upgrade" "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git checkout -qf f7681ab54066 ; popd
+- git clone --depth=50 "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git fetch origin +refs/pull/423/merge && git checkout
+  -qf FETCH_HEAD ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
-- export PACKER_TEMPLATES_BRANCH="cha-packer-upgrade"
+- export PACKER_TEMPLATES_BRANCH="+refs/pull/423/merge"
 - "./packer-templates/bin/packer-build-script ci-amethyst"
 addons:
   artifacts:
