--- a/.travis.yml
+++ b/.travis.yml
@@ -9,13 +9,14 @@ before_install:
   -o Dpkg::Options::="--force-confnew" -yqq docker-engine lvm2 xfsprogs ; echo 'DOCKER_OPTS="$DOCKER_OPTS
   --storage-driver devicemapper"' | sudo tee -a /etc/default/docker ; sudo service
   docker restart ; fi
-- export TRAVIS_COOKBOOKS_BRANCH=cha-md5sum-fix
+- export TRAVIS_COOKBOOKS_BRANCH=emma-precise-fixes
 install:
-- git clone --branch="cha-packer-upgrade" "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git checkout -qf 1aec5a6e56a9 ; popd
+- git clone --depth=50 "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git fetch origin +refs/pull/425/merge && git checkout
+  -qf FETCH_HEAD ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
-- export PACKER_TEMPLATES_BRANCH="cha-packer-upgrade"
+- export PACKER_TEMPLATES_BRANCH="+refs/pull/425/merge"
 - "./packer-templates/bin/packer-build-script ci-connie"
 addons:
   artifacts:
