--- a/.travis.yml
+++ b/.travis.yml
@@ -11,12 +11,11 @@ before_install:
   docker restart ; fi
 - export TRAVIS_COOKBOOKS_BRANCH=emma-precise-fixes
 install:
-- git clone --depth=50 "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git fetch origin +refs/pull/425/merge && git checkout
-  -qf FETCH_HEAD ; popd
+- git clone --branch="emma-precise-updates" "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git checkout -qf 0a16ebe52d25 ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
-- export PACKER_TEMPLATES_BRANCH="+refs/pull/425/merge"
+- export PACKER_TEMPLATES_BRANCH="emma-precise-updates"
 - "./packer-templates/bin/packer-build-script ci-sugilite"
 addons:
   artifacts:
