--- a/.travis.yml
+++ b/.travis.yml
@@ -9,14 +9,12 @@ before_install:
   -o Dpkg::Options::="--force-confnew" -yqq docker-engine lvm2 xfsprogs ; echo 'DOCKER_OPTS="$DOCKER_OPTS
   --storage-driver devicemapper"' | sudo tee -a /etc/default/docker ; sudo service
   docker restart ; fi
-- export TRAVIS_COOKBOOKS_BRANCH=cha-dev-trusty-q2
 install:
-- git clone --depth=50 "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git fetch origin +refs/pull/436/merge && git checkout
-  -qf FETCH_HEAD ; popd
+- git clone --branch="meat-cookiecat" "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git checkout -qf 3c3ab9306f35 ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
-- export PACKER_TEMPLATES_BRANCH="+refs/pull/436/merge"
+- export PACKER_TEMPLATES_BRANCH="meat-cookiecat"
 - "./packer-templates/bin/packer-build-script ci-sugilite"
 addons:
   artifacts:
