--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ before_install:
   -o Dpkg::Options::="--force-confnew" -yqq docker-engine lvm2 xfsprogs ; echo 'DOCKER_OPTS="$DOCKER_OPTS
   --storage-driver devicemapper"' | sudo tee -a /etc/default/docker ; sudo service
   docker restart ; fi
+- export TRAVIS_COOKBOOKS_BRANCH=cha-dev-trusty-q2
 install:
 - git clone --depth=50 "https://github.com/travis-ci/packer-templates.git"
 - pushd packer-templates && git fetch origin +refs/pull/437/merge && git checkout
