--- a/.travis.yml
+++ b/.travis.yml
@@ -11,11 +11,12 @@ before_install:
   docker restart ; fi
 - export TRAVIS_COOKBOOKS_BRANCH=meat-community-cookbook-updates
 install:
-- git clone --branch="meat-cookiecat" "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git checkout -qf 9403a6309f32 ; popd
+- git clone --depth=50 "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git fetch origin +refs/pull/437/merge && git checkout
+  -qf FETCH_HEAD ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
-- export PACKER_TEMPLATES_BRANCH="meat-cookiecat"
+- export PACKER_TEMPLATES_BRANCH="+refs/pull/437/merge"
 - "./packer-templates/bin/packer-build-script ci-sugilite"
 addons:
   artifacts:
