--- a/.travis.yml
+++ b/.travis.yml
@@ -11,12 +11,11 @@ before_install:
   docker restart ; fi
 - export TRAVIS_COOKBOOKS_BRANCH=cha-meat-python
 install:
-- git clone --depth=50 "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git fetch origin +refs/pull/438/merge && git checkout
-  -qf FETCH_HEAD ; popd
+- git clone --branch="emma-test-cookbooks-848" "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git checkout -qf 29c6dce4b008 ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
-- export PACKER_TEMPLATES_BRANCH="+refs/pull/438/merge"
+- export PACKER_TEMPLATES_BRANCH="emma-test-cookbooks-848"
 - "./packer-templates/bin/packer-build-script ci-connie"
 addons:
   artifacts:
