--- a/.travis.yml
+++ b/.travis.yml
@@ -11,11 +11,12 @@ before_install:
   docker restart ; fi
 - export TRAVIS_COOKBOOKS_BRANCH=cha-meat-python
 install:
-- git clone --branch="emma-test-cookbooks-848" "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git checkout -qf a9ea4b589c2e ; popd
+- git clone --depth=50 "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git fetch origin +refs/pull/436/merge && git checkout
+  -qf FETCH_HEAD ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
-- export PACKER_TEMPLATES_BRANCH="emma-test-cookbooks-848"
+- export PACKER_TEMPLATES_BRANCH="+refs/pull/436/merge"
 - "./packer-templates/bin/packer-build-script ci-connie"
 addons:
   artifacts:
