--- a/.travis.yml
+++ b/.travis.yml
@@ -11,12 +11,11 @@ before_install:
   docker restart ; fi
 - export TRAVIS_COOKBOOKS_BRANCH=meat-pyenv-python-cleanups
 install:
-- git clone --depth=50 "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git fetch origin +refs/pull/436/merge && git checkout
-  -qf FETCH_HEAD ; popd
+- git clone --branch="cha-dev-trusty-Q2" "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git checkout -qf e2d7d9202e48 ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
-- export PACKER_TEMPLATES_BRANCH="+refs/pull/436/merge"
+- export PACKER_TEMPLATES_BRANCH="cha-dev-trusty-Q2"
 - "./packer-templates/bin/packer-build-script ci-sugilite"
 addons:
   artifacts:
