--- a/.travis.yml
+++ b/.travis.yml
@@ -11,11 +11,11 @@ before_install:
   docker restart ; fi
 - export TRAVIS_COOKBOOKS_BRANCH=meat-neo4j-ark
 install:
-- git clone --branch="master" "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git checkout -qf @ ; popd
+- git clone --branch="meat-neo4j-specs" "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git checkout -qf 6446d677c8cf ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
-- export PACKER_TEMPLATES_BRANCH="master"
+- export PACKER_TEMPLATES_BRANCH="meat-neo4j-specs"
 - "./packer-templates/bin/packer-build-script ci-sugilite"
 addons:
   artifacts:
