--- a/.travis.yml
+++ b/.travis.yml
@@ -11,11 +11,12 @@ before_install:
   docker restart ; fi
 - export TRAVIS_COOKBOOKS_BRANCH=meat-neo4j-ark
 install:
-- git clone --branch="meat-neo4j-specs" "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git checkout -qf 76656deb2422 ; popd
+- git clone --depth=50 "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git fetch origin +refs/pull/459/merge && git checkout
+  -qf FETCH_HEAD ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
-- export PACKER_TEMPLATES_BRANCH="meat-neo4j-specs"
+- export PACKER_TEMPLATES_BRANCH="+refs/pull/459/merge"
 - "./packer-templates/bin/packer-build-script ci-sugilite"
 addons:
   artifacts:
