--- a/.travis.yml
+++ b/.travis.yml
@@ -9,12 +9,13 @@ before_install:
   -o Dpkg::Options::="--force-confnew" -yqq docker-engine lvm2 xfsprogs ; echo 'DOCKER_OPTS="$DOCKER_OPTS
   --storage-driver devicemapper"' | sudo tee -a /etc/default/docker ; sudo service
   docker restart ; fi
+- export TRAVIS_COOKBOOKS_BRANCH=meat-neo4j-init
 install:
-- git clone --branch="meat-coc" "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git checkout -qf b265aea9e216 ; popd
+- git clone --branch="meat-neo4j-init" "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git checkout -qf ab83cc2b7435 ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
-- export PACKER_TEMPLATES_BRANCH="meat-coc"
+- export PACKER_TEMPLATES_BRANCH="meat-neo4j-init"
 - "./packer-templates/bin/packer-build-script ci-amethyst"
 addons:
   artifacts:
