--- a/.travis.yml
+++ b/.travis.yml
@@ -11,12 +11,11 @@ before_install:
   docker restart ; fi
 - export TRAVIS_COOKBOOKS_BRANCH=meat-no-mercurial-common
 install:
-- git clone --depth=50 "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git fetch origin +refs/pull/461/merge && git checkout
-  -qf FETCH_HEAD ; popd
+- git clone --branch="meat-mercurial-pip" "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git checkout -qf 1ad8c3214dba ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
-- export PACKER_TEMPLATES_BRANCH="+refs/pull/461/merge"
+- export PACKER_TEMPLATES_BRANCH="meat-mercurial-pip"
 - "./packer-templates/bin/packer-build-script ci-cookiecat"
 addons:
   artifacts:
