--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,17 @@
 ---
-language: generic
+language: minimal
 dist: trusty
 group: edge
 sudo: true
 before_install:
 - if [[ "${BUILDER}" = "docker" ]] ; then sudo apt-get update -yqq ; sudo apt-get
-  purge -o Dpkg::Options::="--force-confnew" -yqq docker-engine ; sudo apt-get install
-  -o Dpkg::Options::="--force-confnew" -yqq docker-engine lvm2 xfsprogs ; echo 'DOCKER_OPTS="$DOCKER_OPTS
+  purge -o Dpkg::Options::="--force-confnew" -yqq docker-ce ; sudo apt-get install
+  -o Dpkg::Options::="--force-confnew" -yqq docker-ce lvm2 xfsprogs ; echo 'DOCKER_OPTS="$DOCKER_OPTS
   --storage-driver devicemapper"' | sudo tee -a /etc/default/docker ; sudo service
   docker restart ; fi
 install:
 - git clone --branch="master" "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git checkout -qf fb7eee054b0c ; popd
+- pushd packer-templates && git checkout -qf @ ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
 - export PACKER_TEMPLATES_BRANCH="master"
