--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,27 @@
 ---
-language: generic
+language: minimal
 dist: trusty
 group: edge
 sudo: true
 before_install:
-- if [[ "x${BUILDER}" = "xdocker" ]] ; then sudo apt-get update -yqq ; sudo apt-get
-  purge -o Dpkg::Options::="--force-confnew" -yqq docker-engine ; sudo apt-get install
-  -o Dpkg::Options::="--force-confnew" -yqq docker-engine lvm2 xfsprogs ; echo 'DOCKER_OPTS="$DOCKER_OPTS
+- if [[ "${BUILDER}" = "docker" ]] ; then sudo apt-get update -yqq ; sudo apt-get
+  purge -o Dpkg::Options::="--force-confnew" -yqq docker-ce ; sudo apt-get install
+  -o Dpkg::Options::="--force-confnew" -yqq docker-ce lvm2 xfsprogs ; echo 'DOCKER_OPTS="$DOCKER_OPTS
   --storage-driver devicemapper"' | sudo tee -a /etc/default/docker ; sudo service
   docker restart ; fi
 install:
-- git clone --branch="master" "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git checkout -qf bd6400d31796dea09329a91205868d55bb6742ad
-  ; popd
+- git clone --branch="meat-stevonnie" "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git checkout -qf bbd91fbd0e94 ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
+- export PACKER_TEMPLATES_BRANCH="meat-stevonnie"
 - "./packer-templates/bin/packer-build-script ci-stevonnie"
+addons:
+  artifacts:
+    paths:
+    - image-metadata-$(cat .packer-build-image-name).tar.bz2
+    target_paths:
+    - travis-ci/packer-templates/ci-stevonnie/$BUILDER
 env:
   matrix:
   - BUILDER=googlecompute
