--- a/.travis.yml
+++ b/.travis.yml
@@ -9,12 +9,13 @@ before_install:
   -o Dpkg::Options::="--force-confnew" -yqq docker-ce lvm2 xfsprogs ; echo 'DOCKER_OPTS="$DOCKER_OPTS
   --storage-driver devicemapper"' | sudo tee -a /etc/default/docker ; sudo service
   docker restart ; fi
+- export TRAVIS_COOKBOOKS_BRANCH=cha-bv-pair-fix-python
 install:
-- git clone --branch="master" "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git checkout -qf 022b9c535622 ; popd
+- git clone --branch="cha-bv-pair-fix-python" "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git checkout -qf 0db70d9e7e17 ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
-- export PACKER_TEMPLATES_BRANCH="master"
+- export PACKER_TEMPLATES_BRANCH="cha-bv-pair-fix-python"
 - "./packer-templates/bin/packer-build-script ci-garnet"
 addons:
   artifacts:
