--- a/.travis.yml
+++ b/.travis.yml
@@ -11,11 +11,12 @@ before_install:
   docker restart ; fi
 - export TRAVIS_COOKBOOKS_BRANCH=cha-bv-pair-fix-python
 install:
-- git clone --branch="cha-bv-pair-fix-python" "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git checkout -qf 0db70d9e7e17 ; popd
+- git clone --depth=50 "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git fetch origin +refs/pull/474/merge && git checkout
+  -qf FETCH_HEAD ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
-- export PACKER_TEMPLATES_BRANCH="cha-bv-pair-fix-python"
+- export PACKER_TEMPLATES_BRANCH="+refs/pull/474/merge"
 - "./packer-templates/bin/packer-build-script ci-garnet"
 addons:
   artifacts:
