--- a/.travis.yml
+++ b/.travis.yml
@@ -11,12 +11,11 @@ before_install:
   docker restart ; fi
 - export TRAVIS_COOKBOOKS_BRANCH=cha-mercurial-install-fix
 install:
-- git clone --depth=50 "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git fetch origin +refs/pull/486/merge && git checkout
-  -qf FETCH_HEAD ; popd
+- git clone --branch="cha-mercurial-fix" "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git checkout -qf 5af79b180cbb ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
-- export PACKER_TEMPLATES_BRANCH="+refs/pull/486/merge"
+- export PACKER_TEMPLATES_BRANCH="cha-mercurial-fix"
 - "./packer-templates/bin/packer-build-script ci-stevonnie"
 addons:
   artifacts:
