--- a/.travis.yml
+++ b/.travis.yml
@@ -11,11 +11,12 @@ before_install:
   docker restart ; fi
 - export TRAVIS_COOKBOOKS_BRANCH=bv-add-jvm-mem-params
 install:
-- git clone --branch="bv-add-jvm-mem-parameters" "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git checkout -qf 707b67f6abbf ; popd
+- git clone --depth=50 "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git fetch origin +refs/pull/487/merge && git checkout
+  -qf FETCH_HEAD ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
-- export PACKER_TEMPLATES_BRANCH="bv-add-jvm-mem-parameters"
+- export PACKER_TEMPLATES_BRANCH="+refs/pull/487/merge"
 - "./packer-templates/bin/packer-build-script ci-amethyst"
 addons:
   artifacts:
