--- a/.travis.yml
+++ b/.travis.yml
@@ -10,11 +10,11 @@ before_install:
   --storage-driver devicemapper"' | sudo tee -a /etc/default/docker ; sudo service
   docker restart ; fi
 install:
-- git clone --branch="master" "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git checkout -qf 9c6875413a53 ; popd
+- git clone --branch="cha-edmorley-php-update" "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git checkout -qf dee1b0b0c9a0 ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
-- export PACKER_TEMPLATES_BRANCH="master"
+- export PACKER_TEMPLATES_BRANCH="cha-edmorley-php-update"
 - "./packer-templates/bin/packer-build-script ci-garnet"
 addons:
   artifacts:
