--- a/.travis.yml
+++ b/.travis.yml
@@ -9,12 +9,13 @@ before_install:
   -o Dpkg::Options::="--force-confnew" -yqq docker-ce lvm2 xfsprogs ; echo 'DOCKER_OPTS="$DOCKER_OPTS
   --storage-driver devicemapper"' | sudo tee -a /etc/default/docker ; sudo service
   docker restart ; fi
+- export TRAVIS_COOKBOOKS_BRANCH=pull/892/head
 install:
-- git clone --branch="edmorley-rm-xenial-docker-override" "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git checkout -qf 6d23a45ad69c ; popd
+- git clone --branch="edmorley-test-bump-versions" "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git checkout -qf 3bb4a21b8d45 ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
-- export PACKER_TEMPLATES_BRANCH="edmorley-rm-xenial-docker-override"
+- export PACKER_TEMPLATES_BRANCH="edmorley-test-bump-versions"
 - "./packer-templates/bin/packer-build-script ci-stevonnie"
 addons:
   artifacts:
