--- a/.travis.yml
+++ b/.travis.yml
@@ -9,13 +9,12 @@ before_install:
   -o Dpkg::Options::="--force-confnew" -yqq docker-ce lvm2 xfsprogs ; echo 'DOCKER_OPTS="$DOCKER_OPTS
   --storage-driver devicemapper"' | sudo tee -a /etc/default/docker ; sudo service
   docker restart ; fi
-- export TRAVIS_COOKBOOKS_BRANCH=edmorley-update-docker
 install:
-- git clone --branch="edmorley-test-bump-versions" "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git checkout -qf 278a3b5510d6 ; popd
+- git clone --branch="meat-rm-sugilite" "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git checkout -qf 75eb66c21fe6 ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
-- export PACKER_TEMPLATES_BRANCH="edmorley-test-bump-versions"
+- export PACKER_TEMPLATES_BRANCH="meat-rm-sugilite"
 - "./packer-templates/bin/packer-build-script ci-amethyst"
 addons:
   artifacts:
