--- a/.travis.yml
+++ b/.travis.yml
@@ -10,11 +10,12 @@ before_install:
   --storage-driver devicemapper"' | sudo tee -a /etc/default/docker ; sudo service
   docker restart ; fi
 install:
-- git clone --branch="ssh-key-import" "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git checkout -qf 4d190cec088b ; popd
+- git clone --depth=50 "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git fetch origin +refs/pull/505/merge && git checkout
+  -qf FETCH_HEAD ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
-- export PACKER_TEMPLATES_BRANCH="ssh-key-import"
+- export PACKER_TEMPLATES_BRANCH="+refs/pull/505/merge"
 - "./packer-templates/bin/packer-build-script ci-connie"
 addons:
   artifacts:
